<resources>
    <string name="app_name">Anticipate</string>
    <string name="desc">To detect links on-screen and pre-load them, Anticipate requires its accessibility service to be enabled</string>
    <string name="enable_accessibility_service">Enable Accessibility Service</string>

    <string name="desc_default">To open all links using Anticipate, you may set it as the default browser</string>
    <string name="set_as_default_browser">Set as default browser</string>
    <string name="dialog_clear_defaults">Another browser is currently set as default. You must clear its defaults first.</string>
    <string name="try_it_out">Try it out</string>
    <string name="enter_a_url">Enter a URL</string>
    <string name="dialog_draw_overlay">On Marshmallow and up, the Draw Over Other Apps permission must be granted to show the floating window</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_settings_failed_clear_deafults">Open settings failed. Please manually clear the defaults for your current browser</string>
    <string name="accessibility_disabled">Anticipate\'s accessibility service is disabled. Please enable to pre-load links.</string>
    <string name="floating_window_checkbox">Floating window to monitor pre-loaded URLs</string>
    <string name="anticipate_url_monitor">Anticipate URL Monitor</string>
    <string name="notification_tap_to_close">Tap to close floating window</string>
    <string name="about_dialog_title">Anticipate v%s</string>
    <string name="dismiss">Dismiss</string>

    <string name="about_body"><![CDATA[
        <b>Anticipate</b> is a web pre-loading browser tool that looks for links on-screen.
        <br/>
        It uses Chrome Custom Tabs to resolve the main DNS and pre-fetch resources in advance so your web pages are ready
        to view as soon as possible.<br/><br/>

        Developed by <b>Daniel Ciao</b><br/>

        <a href=\'http://pluscubed.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/plusCubed\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://google.com/+DanielCiao\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/pluscubed\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/dciao\'>LinkedIn</a><br/><br/>

        <a href=\'https://github.com/pluscubed/anticipate\'>GitHub</a> - source, issues, feature requests<br/><br/>
    ]]></string>
    <string name="about">About</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="per_app_filter_mode">Per-app filter mode:</string>
    <string name="configure">Configure</string>
    <string name="blacklist">Blacklist</string>
    <string name="whitelist">Whitelist</string>
    <string name="blacklisted_apps">Blacklisted Apps</string>
    <string name="whitelisted_apps">Whitelisted Apps</string>
    <string name="open_with">Open with:</string>
    <string name="unable_to_launch">Chrome isn\'t installed</string>
    <string name="transition_fab_add">dialog_add</string>

</resources>
