<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="-4dp"
    android:layout_marginRight="-4dp"
    android:layout_marginTop="-6dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@id/image_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                tools:src="@drawable/ic_cross_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@id/button_enable_service"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enable_accessibility_service" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@id/image_default"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_earth"
                tools:tint="@color/blue_800" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_default"
                android:textSize="16sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@id/button_set_default"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_as_default_browser" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingEnd="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingStart="12dp"
            android:theme="@style/Theme.Anticipate.DarkAccent"
            tools:ignore="UseCompoundDrawables">


            <android.support.design.widget.TextInputLayout
                android:id="@id/textinputlayout_try"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1">

                <com.pluscubed.anticipate.widget.DispatchBackEditText
                    android:id="@id/edittext_try"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_a_url"
                    android:inputType="textUri" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@id/button_try"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/try_it_out" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
    </LinearLayout>


</android.support.v7.widget.CardView>